--- a/RelationshipCalculator/RelationshipCalculator/RelationshipCalculator.csproj
+++ b/RelationshipCalculator/RelationshipCalculator/RelationshipCalculator.csproj
@@ -95,6 +95,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Model\DataStore.cs" />
     <Compile Include="Model\SearchModel.cs" />
     <Compile Include="Services\DataGetter.cs" />
     <Compile Include="ViewModel\NavMenuItem.cs" />
@@ -108,12 +109,12 @@
     <Compile Include="View\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Model\RelationshipModel.cs" />
+    <Compile Include="Model\CalculatorModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DataSource.cs" />
     <Compile Include="Services\Filter.cs" />
     <Compile Include="Services\Searcher.cs" />
-    <Compile Include="ViewModel\RelationshipViewModel.cs" />
+    <Compile Include="ViewModel\CalculatorViewModel.cs" />
     <Compile Include="View\SearchView.xaml.cs">
       <DependentUpon>SearchView.xaml</DependentUpon>
     </Compile>
